[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lidarlens"
version = "0.1.4"
description = "A Python package for 3D LiDAR point cloud processing, analysis, terrain modelling, and visualization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Wei Liu"},
]
keywords = [
    "lidar", "point-cloud", "las", "laz", "copc",
    "geospatial", "3d", "terrain", "dem", "dtm", "dsm",
    "open3d", "remote-sensing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "open3d>=0.17.0",
    "laspy[lazrs]>=2.4.0",
    "numpy>=1.22.0,<2.0.0",
    "scipy>=1.9.0",
    "pyproj>=3.4.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dl = ["torch>=2.0.0", "h5py>=3.7.0", "scikit-learn>=1.1.0"]
cli = ["click>=8.0.0"]
all = ["lidarlens[dl,cli]", "rasterio>=1.3.0", "pandas>=1.5.0"]

[project.scripts]
lidarlens = "lidarlens.cli:main"

[project.urls]
Homepage = "https://github.com/lidarlens/pylidarlens"
Documentation = "https://github.com/lidarlens/pylidarlens#readme"
Repository = "https://github.com/lidarlens/pylidarlens"
Issues = "https://github.com/lidarlens/pylidarlens/issues"

[tool.setuptools.packages.find]
include = ["lidarlens*"]

[tool.pytest.ini_options]
testpaths = ["tests/test_lidarlens"]
addopts = "-v --tb=short"
